styles/layout.css
/*Module Common Css*/
* {
    font-family: 'Open Sans';
    line-height: 1.5em;
}



body {
    display: block;
    margin: 0px 2px;
    color: #333333;
    box-sizing: border-box;
}

.no-focus *:focus {
    outline: none !important;
    outline-width: 0 !important;
    box-shadow: none;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
}

html[xmlns] .clearfix {
    display: block;
}

h1 {
    font-size: 26px;
}

h2 {
    font-size: 23px;
}

h3 {
    font-size: 18px;
    margin: 5px 0px;
}

h4 {
    font-size: 16px;
}

h2.pageheading {
    margin: 17px 10%;
}

h2.top-slider-heading {
    margin-top: 0px;
    margin-bottom: 0px;
}

hr {
    width: 100%;
    border: 0px;
    height: 0px;
    border-bottom: 1px solid #999999;
}

fieldset {
    border: 0px;
}

div, p, span, input, textarea {
    font-size: 16px;
    -webkit-text-size-adjust: 100%;
}

    input[type='button']:not(.divHotSpot), button:not(.divHotSpot) {
        color: white;
        padding: 5px 15px;
        border-radius: 5px;
        background-color: rgb(13, 67, 113);
        border-color: rgb(0, 0, 0);
        border-width: 0px;
        cursor: pointer;
        min-width: 100px;
    }

        h1:focus, a:focus, input:focus, button:focus, textarea:focus, select:focus, h1:focus, a:active, input:active, button:active, textarea:active, select:active {
            outline: #ff8c00 solid 2px;
        }

#appmenu *:focus, #appmenu *:active {
    outline: #ff8c00 solid 2px;
}

.mxwidth {
    max-width: 990px;
}

.headmargin {
    /* margin-top: 144px; */
    /* margin-top: 85px; */
}

#wrapper {
    width: 100%;
    height: auto;
    border: 1px solid #cccccc;
    border-top: 0px;
    min-height: 80px;
    margin: 0 auto;
    overflow: auto;
    margin-bottom: 10px;
}

.innerWrapper {
    float: left;
    width: 100%;
}

.wrapper-img img {
    width: 100%;
}
/*Header Css Start*/
.main-content {
    min-height: 437px;
}

#header-content {
    float: left;
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    width: 100%;
    z-index: 999;
    background-color: #ffffff;
}

#header-title {
    background: #FFF;
    text-align: center;
    min-height: 60px;
    border-bottom: 1px solid rgb(204, 204, 204);
}

    #header-title h1 {
        color: #333333;
        margin-top: 0;
        padding-top: 10px;
        width: 70%;
        margin: 0 auto;
        padding-bottom: 10px;
    }

    #header-title span {
        float: right;
        margin-right: 25px;
        margin-top: 10px;
        border: 1px solid gray;
        padding: 1px 6px 1px 6px;
        border-radius: 15px;
        font-size: 10px;
        color: #fff;
        background: gray;
        cursor: pointer;
    }

    #header-title img {
        float: left;
        margin: 10px 2%;
        height: 35px;
    }

#header-progress {
    /* background: #f1f1f1; */
    height: 40px;
    float: left;
    width: 100%;
    height: auto;
    z-index: 10;
    margin-top: 8px;
}

    #header-progress .progress {
        width: 80%;
        display: flex;
        display: -sm-flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    #header-progress .background {
        width: 70%;
        height: 6px !important;
        border-radius: 5px;
        /* display: flex; */
        justify-content: space-around;
        background: #EDEDED;
        border: 1px solid #f1f1f1;
        margin-top: 10px;
        margin-bottom: 10px;
    }

        #header-progress .background .section {
            width: 25%;
            text-align: right;
            float: left;
        }

        #header-progress .background .filler {
            height: 5px;
            position: relative;
        }


    #header-progress .scale {
        width: 50%;
        height: 18px;
        display: flex;
        justify-content: space-around;
    }

        #header-progress .scale .filler {
            font-size: 12px;
        }

#scoreInnrDiv {
    display: -webkit-inline-box;
}

#header-title.startpage {
    border-bottom: 0px;
}

#header-btn-container {
    float: left;
    width: 100%;
}

    #header-btn-container .wrapper {
        float: right;
        widows: auto;
    }

    #header-btn-container .linkppf-p, #header-btn-container .linksurplus-p {
        margin: 5px 5px;
        background: #045C42;
    }

    #header-btn-container .linksurplus-p {
        margin-right: 0px;
    }

        #header-btn-container .linkppf-p img, #header-btn-container .linksurplus-p img {
            padding-left: 5px;
            position: relative;
            top: 2px;
        }
/*Header Css End*/

/*Footer Css Start*/
#footer-navigation {
    background-color: #FFF;
    width: 100%;
    height: 60px;
    /* display: table; */
}

#footer-navigation .previous, #footer-navigation .next {
    margin-top: 20px;
    margin-bottom: 10px;
    width: 50%;
    float: left;
}

#footer-navigation .previous a, #footer-navigation .next a {
    text-decoration: none;
    position: relative;
    display: inline-flex;
    color: #005976;
}

#footer-navigation .previous a {
    float: right;
    margin-right: 50px;
}

#footer-navigation .next a {
    float: left;
    margin-left: 50px;
}

#footer-navigation .previous .prevImg, #footer-navigation .next .nextImg {
    width: 18px;
}

#footer-navigation .previous a span, #footer-navigation .next a span {
    margin-top: 4px;
}

/*Footer Css End*/

/*Custom Header Css*/
.top-slider-wrapper {
    margin: 0 20px;
}


/*Custom Header Css End*/
.wrapper {
    margin: 0% 2%;
}

.marginLR {
    margin: 0% 2%;
    width: 96%;
}

.autowidth {
    width: auto;
}

.posrel {
    position: relative;
    margin-bottom: auto;
}

.displaynone {
    display: none !important;
}

.pgBgItemFill {
    background-color: #003F6A;
    height: 7px;
    position: relative;
    border-radius: 5px;
}

.progressFg {
    background-color: #047a9c;
    height: 7px;
    position: relative;
    border-radius: 5px;
    float: left;
}

.header-informarion {
    display: flex;
    justify-content: center;
    width: 80%;
    margin-bottom: 10px;
}

.header-content {
    width: 70%;
    justify-content: flex-start;
    display: flex;
}

.hintDiv {
    margin-left: auto;
    width: 135px;
}

.progressDiv {
    float: left;
    width: 135px;
    /*border-right: #cccccc 2px solid;*/
    margin-left: -15px;
}

.scoreDiv {
    float: left;
    width: 100px;
    margin-left: 1px;
    display:none;
}

.hintcontainer {
    display: none;
    border-top: 1px solid #cdcdcd;
    border-bottom: 1px solid #cdcdcd;
    background: #F0F0F0;
    margin-top: 3px;
    height: auto;
    margin-bottom: 15px;
}

.hintcontent {
    text-align: left;
}

.hintlink {
    position: absolute;
    display: none;
    font-weight: bold;
    text-decoration: none;	
}

.closehintlink {
    background-color: transparent;
    color: #005976;
    float: right;
    margin-bottom: 10px;
    margin-right: -5px;
}

.hintimg{
   
    display: inline-block;    
    float: left;
    
}

.hintlinkspan{
    
    vertical-align: top;
    color: #047a9c;
    border-bottom: 1px solid rgb(4, 122, 156);
    margin-left: -2px;
}
.hintinfodiv{
    border-top: 1px solid #cccccc;
    border-bottom: 1px solid #cccccc;
    padding:5px 0 10px 0;
    margin-bottom:25px;
}

